--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "2.5.0",
+    "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
+    "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "2.5.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "@tauri-apps/cli": "^2"
+    "vite": "^6.0.3"
   }
 }
